# dynamics-doctor

./: .gitignore  CMakeLists.txt  command.md
plugin/: CMakeLists.txt
plugin/include/DynamicsDoctor/: LoudnessMeter.h  PluginEditor.h
plugin/source/: LoudnessMeter.cpp  PluginEditor.cpp  PluginProcessor.cpp  TrafficLightComponent.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
